code changes due to review